Current portfolio site edits.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>TIM LEMKE | DEVELOPER</title>
@@ -16,6 +17,7 @@
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 </head>
+
 <body>
   <!-- * * * HEADER * * * -->
   <header id="header">
@@ -42,9 +44,6 @@
             <a href="#skills">Skills & Tools</a>
           </li>
           <li>
-            <a href="#portfolio">Portfolio</a>
-          </li>
-          <li>
             <a href="#contact">Contact</a>
           </li>
         </ul>
@@ -69,7 +68,10 @@
               environment and agency setting. Personally, I feel most comfortable in any setting where inclusivity,
               teamwork and a good sense of humour can be found.</p>
             <p>As a developer I always love learning something new and delivering the best code I can every time. That
-              means code that performs well, is maintainable and is accessible to everyone. My professional experience includes the application of numerous languages, tools and technologies across a wide range of industries. This experience allows me to jump into any project and hit the ground running, contributing from day one.</p>
+              means code that performs well, is maintainable and is accessible to everyone. My professional experience
+              includes the application of numerous languages, tools and technologies across a wide range of industries.
+              This experience allows me to jump into any project and hit the ground running, contributing from day one.
+            </p>
             <p>I am self-managed, hard working and thrive in environments where creativity and teamwork are key, new
               ideas and concepts must be quickly learned and applied, and where it is important to share with others
               along the way.</p>
@@ -90,25 +92,45 @@
             <div class="experience-item">
               <div class="row">
                 <div class="six columns u-text-left">
+                  <h3 class="experience-item-company">tbk Creative</h3>
+                  <a href="https://78digital.com/" target="_blank"><img class="experience-item-logo"
+                      src="/Public/Images/TBK_Logo.png" alt="tbk Creative Logo"></a>
+                </div>
+                <div class="six columns u-text-right">
+                  <h4 class="experience-item-position">Intermediate Front End Developer</h4>
+                  <p class="experience-item-date">2021 - Present</p>
+                </div>
+              </div>
+              <ul class="left-padding">
+                <li>Creating premier websites and web applications some of Canada's most prolific brands
+                </li>
+                <li>Working daily with HTML5, CSS3, JavaScript, React, Storybook, jQuery, Bootstrap, SCSS (Sass), Less,
+                  Parcel, Webpack, Gulp, Grunt, Webpack, WordPress, PHP among other languages, tools and technologies.
+                </li>
+                <li>Delivering code changes and completing work in a fast paced, agile environment.</li>
+              </ul>
+            </div>
+            <div class="experience-item">
+              <div class="row">
+                <div class="six columns u-text-left">
                   <h3 class="experience-item-company">SeventyEight Digital Inc</h3>
                   <a href="https://78digital.com/" target="_blank"><img class="experience-item-logo"
                       src="/Public/Images/SeventyEightDigitalLogo.jpg" alt="Seventyeight Digital Logo"></a>
                 </div>
                 <div class="six columns u-text-right">
                   <h4 class="experience-item-position">Developer</h4>
-                  <p class="experience-item-date">2018 - Present</p>
+                  <p class="experience-item-date">2018 - 2021</p>
                 </div>
               </div>
-              <p>Currently working as a full stack web developer with the dedicated, talented and agile team at
-                Seventyeight Digital.</p>
               <ul class="left-padding">
-                <li>Developing web sites and applications for numerous clients across many different industries.
+                <li>Developed web sites and applications for numerous clients across many different industries.
                 </li>
-                <li>Working daily with HTML5, CSS3, JavaScript, jQuery, Bootstrap, Foundation for Sites, SCSS (Sass),
-                  Gulp, Webpack, Kentico CMS (Portal Engine and MVC Solutions), Wordpress, C#, ASP.NET, Web Forms and
+                <li>Worked daily with HTML5, CSS3, JavaScript, jQuery, Bootstrap, Foundation for Sites, SCSS (Sass),
+                  Gulp, Webpack, Kentico CMS (Portal Engine and MVC Solutions), WordPress, C#, ASP.NET, Web Forms and
                   MVC, Adobe Photoshop and Illustrator, Git, GitHub, Bitbucket and Sourcetree, among other languages,
                   tools and technologies.</li>
-                <li>Actively involved in all stages of development life cycle, including interfacing with clients and
+                <li>Was actively involved in all stages of development life cycle, including interfacing with clients
+                  and
                   assisting in project management.</li>
               </ul>
             </div>
@@ -193,293 +215,6 @@
       </div>
       <hr>
     </section>
-    <!-- * * * PORTFOLIO SECTION * * * -->
-    <section id="portfolio">
-      <div class="container">
-        <div class="row">
-          <div class="twelve columns">
-            <h2>Portfolio</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="twelve columns">
-            <h4>Select Client Work</h4>
-            <p>A selection of some of the client projects I have worked on.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="four columns">
-            <p class="u-text-bold">OPPI Site Build</p>
-            <img class="u-max-full-width" src="/Public/Images/ontarioPlanners-ScreenShot.png" alt="OPPI Web Site Screenshot">
-            <ul class="u-inline-list">
-              <li>
-                <i class="devicon-html5-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-css3-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-bootstrap-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-sass-original" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-javascript-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-jquery-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-dot-net-plain" aria-hidden="true"></i>
-              </li>
-              <li class="kentico-icon-container">
-                <i class="icon-logokentico" aria-hidden="true"></i>
-              </li>
-            </ul>
-            <p>Custom Kentico Portal Engine site build. Required functionality implemented through custom developed page
-              templates, layouts and widgets.</p>
-            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a href="https://ontarioplanners.ca/home"
-                target="_blank">Visit the site here.</a></p>
-          </div>
-          <div class="four columns">
-            <p class="u-text-bold">CONO Site Build</p>
-            <img class="u-max-full-width" src="/Public/Images/cono-ScreenShot.png" alt="CONO Web Site Screenshot">
-            <ul class="u-inline-list">
-              <li>
-                <i class="devicon-html5-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-css3-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-bootstrap-plain " aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-sass-original" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-javascript-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-jquery-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-php-plain " aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-wordpress-plain " aria-hidden="true"></i>
-              </li>
-            </ul>
-            <p>Created a modern WordPress theme from scratch utilizing custom developed Gutenberg compatible blocks to
-              implement required functionality.</p>
-            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a href="https://www.collegeofnaturopaths.on.ca/"
-                target="_blank">Visit the site here.</a></p>
-          </div>
-          <div class="four columns">
-            <p class="u-text-bold">CFPC Site Build</p>
-            <img class="u-max-full-width" src="/Public/Images/cfpc-ScreenShot.png" alt="CFPC Web Site Screenshot">
-            <ul class="u-inline-list">
-              <li>
-                <i class="devicon-html5-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-css3-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-foundation-plain " aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-sass-original" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-javascript-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-jquery-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-dot-net-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-csharp-plain " aria-hidden="true"></i>
-              </li>
-              <li class="kentico-icon-container">
-                <i class="icon-logokentico" aria-hidden="true"></i>
-              </li>
-            </ul>
-            <p>Custom Kentico MVC site build. Developed numerous custom page builder
-              widgets to facilitate dynamic content entry.</p>
-            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a href="https://www.cfpc.ca/en/home"
-                target="_blank">Visit the site here.</a></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="four columns">
-            <p class="u-text-bold">Elevation Pictures Site Build</p>
-            <img class="u-max-full-width" src="/Public/Images/elevationPictures-ScreenShot.png" alt="Elevation Pictures Web Site Screenshot">
-            <ul class="u-inline-list">
-              <li>
-                <i class="devicon-dot-net-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-php-plain " aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-wordpress-plain " aria-hidden="true"></i>
-              </li>
-            </ul>
-            <p>Converted custom developed ASP.NET CMS site into a modern WordPress theme. Implemented custom post types and PHP code to replicate and improve upon functionality of original site.</p>
-            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a href="http://elevated-dev.atwebpages.com/"
-                target="_blank">Visit the site here.</a></p>
-          </div>
-          <div class="four columns">
-            <p class="u-text-bold">NewSong Academy Site Build</p>
-            <img class="u-max-full-width" src="/Public/Images/newsongAcademy-ScreenShot.png" alt="NewSong Academy Web Site Screenshot">
-            <ul class="u-inline-list">
-              <li>
-                <i class="devicon-html5-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-css3-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-bootstrap-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-sass-original" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-javascript-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-jquery-plain" aria-hidden="true"></i>
-              </li>
-            </ul>
-            <p>Designed and built custom static HTML site. Created and implemented original custom design based on clients needs.</p>
-            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a href="https://www.newsongacademy.ca/"
-                target="_blank">Visit the site here.</a></p>
-          </div>
-          <div class="four columns">
-            <p class="u-text-bold">Toronto Global Landing Page</p>
-            <img class="u-max-full-width" src="/Public/Images/torontoGlobal-ScreenShot.png" alt="NewSong Academy Web Site Screenshot">
-            <ul class="u-inline-list">
-              <li>
-                <i class="devicon-html5-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-css3-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-bootstrap-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-sass-original" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-javascript-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-jquery-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-dot-net-plain" aria-hidden="true"></i>
-              </li>
-              <li class="kentico-icon-container">
-                <i class="icon-logokentico" aria-hidden="true"></i>
-              </li>
-            </ul>
-            <p>Designed and implemented custom landing page within exisiting client site. Work also included implementation of custom interactive dashboard for data exploration.</p>
-            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a href="https://torontoglobal.ca/our-industries/technology"
-                target="_blank">Visit the site here.</a></p>
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="twelve columns">
-            <h4>Personal Projects</h4>
-            <p>A selection of some of the personal projects I have created.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="four columns">
-            <p class="u-text-bold">GitHub Finder</p>
-            <img class="u-max-full-width" src="/Public/Images/githubFinder-ScreenShot.png" alt="World of Flavour Web Application Screenshot">
-            <ul class="u-inline-list">
-              <li>
-                <i class="devicon-react-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-javascript-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-bootstrap-plain " aria-hidden="true"></i>
-              </li>
-            </ul>
-            <p>A React Web Application built using functional components, hooks, React Router, the Context API and the GitHub API.</p>
-            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a
-                href="https://tl-github-finder.netlify.app/" target="_blank">Check it out here.</a></p>
-            <p><i class="fa fa-github" aria-hidden="true"></i> <a
-                href="https://github.com/TimLemke/tl-github-finder" target="_blank">GitHub Repo</a></p>
-          </div>
-          <div class="four columns">
-            <p class="u-text-bold">World of Flavour</p>
-            <img class="u-max-full-width" src="/Public/Images/worldOfFlavour-ScreenShot.png" alt="World of Flavour Web Application Screenshot">
-            <ul class="u-inline-list">
-              <li>
-                <i class="devicon-html5-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-css3-plain"></i>
-              </li>
-              <li>
-                <i class="devicon-sass-original" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-javascript-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-jquery-plain" aria-hidden="true"></i>
-              </li>
-            </ul>
-            <p>A Web App built using JavaScript, jQuery, SCSS, and the Zomato API.</p>
-            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a
-                href="https://timlemke.github.io/tim_lemke_worldOfFlavour/" target="_blank">Check it out here.</a></p>
-            <p><i class="fa fa-github" aria-hidden="true"></i> <a
-                href="https://github.com/TimLemke/tim_lemke_worldOfFlavour" target="_blank">GitHub Repo</a></p>
-          </div>
-          <div class="four columns">
-            <p class="u-text-bold">Emoji Match</p>
-            <img class="u-max-full-width" src="/Public/Images/emojiMatch-ScreenShot.png" alt="Emoji Match Web Application Screenshot">
-            <ul class="u-inline-list">
-              <li>
-                <i class="devicon-html5-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-css3-plain"></i>
-              </li>
-              <li>
-                <i class="devicon-sass-original" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-javascript-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-jquery-plain" aria-hidden="true"></i>
-              </li>
-            </ul>
-            <p>A dynamic matching game built using JavaScript, jQuery and SCSS</p>
-            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a
-                href="https://timlemke.github.io/tim_lemke_emojiMatch/" target="_blank">Check it out here.</a></p>
-            <p><i class="fa fa-github" aria-hidden="true"></i> <a
-                href="https://github.com/TimLemke/tim_lemke_emojiMatch" target="_blank">GitHub Repo</a></p>
-          </div>
-          <div class="four columns">
-          </div>
-        </div>
-      </div>
-      <hr>
-    </section>
     <!-- * * * CONTACT SECTION * * * -->
     <section id="contact">
       <div class="container">
@@ -489,9 +224,6 @@
             <p>Send me an email at <a href="mailto:timlemkedeveloper@gmail.com"
                 target="_top">timlemkedeveloper@gmail.com</a>, or fill out the form
               below.</p>
-            <p>Want a copy of my resume? <a class="u-underline-none" href="/Public/TimLemkeDeveloper-Resume.pdf"
-                target="_blank">Click here. </a><a class="u-underline-none" href="/Public/TimLemkeDeveloper-Resume.pdf"
-                target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i></a></p>
             <form action="https://formspree.io/timlemkedeveloper@gmail.com" method="POST">
               <div class="row">
                 <div class="six columns">
@@ -564,4 +296,5 @@
   <!-- * * * JS * * * -->
   <script src="Public/JS/bundle.min.js"></script>
 </body>
+
 </html>
