Small site updates

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="twelve columns">
             <h2>About Me</h2>
             <p>Hello!</p>
-            <p>Thanks for checking out my site. My name is Tim Lemke, and I am full stack web developer living in and
+            <p>Thanks for checking out my site! My name is Tim Lemke, and I am full stack web developer living in and
               working remotely from London ON. I have over four years of professional experience and have worked in
               both a B2B SaaS
               environment and agency setting. Personally, I feel most comfortable in any setting where inclusivity,
@@ -91,14 +91,9 @@
             <h2>Experience</h2>
             <div class="experience-item">
               <div class="row">
-                <div class="six columns u-text-left">
+                <div class="twelve columns u-text-left">
                   <h3 class="experience-item-company">tbk Creative</h3>
-                  <a href="https://78digital.com/" target="_blank"><img class="experience-item-logo"
-                      src="/Public/Images/TBK_Logo.png" alt="tbk Creative Logo"></a>
-                </div>
-                <div class="six columns u-text-right">
-                  <h4 class="experience-item-position">Intermediate Front End Developer</h4>
-                  <p class="experience-item-date">2021 - Present</p>
+                  <p class="experience-item-position">Intermediate Front End Developer <br> 2021 - Present</p>
                 </div>
               </div>
               <ul class="left-padding">
@@ -113,14 +108,9 @@
             <hr>
             <div class="experience-item">
               <div class="row">
-                <div class="six columns u-text-left">
+                <div class="twelve columns">
                   <h3 class="experience-item-company">SeventyEight Digital Inc</h3>
-                  <a href="https://78digital.com/" target="_blank"><img class="experience-item-logo"
-                      src="/Public/Images/SeventyEightDigitalLogo.jpg" alt="Seventyeight Digital Logo"></a>
-                </div>
-                <div class="six columns u-text-right">
-                  <h4 class="experience-item-position">Developer</h4>
-                  <p class="experience-item-date">2018 - 2021</p>
+                  <p class="experience-item-position">Developer <br> 2018 - 2021</p>
                 </div>
               </div>
               <ul class="left-padding">
@@ -138,14 +128,9 @@
             <hr>
             <div class="experience-item">
               <div class="row">
-                <div class="six columns u-text-left">
+                <div class="twelve columns">
                   <h3 class="experience-item-company">Advanced Utility Systems Inc</h3>
-                  <a href="https://advancedutility.com/" target="_blank"><img class="experience-item-logo"
-                      src="/Public/Images/AdvancedUtilitySystemsLogo.png" alt="Advanced Utility Systems Logo"></a>
-                </div>
-                <div class="six columns u-text-right">
-                  <h4 class="experience-item-position">Junior Web Developer</h4>
-                  <p class="experience-item-date">2017 - 2018</p>
+                  <p class="experience-item-position">Junior Web Developer <br> 2017 - 2018</p>
                 </div>
               </div>
               <ul class="left-padding">
