--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div class="row align-items-center">
 						<div class="col-12 col-md-3 col-xl-2 text-center">
 							<img class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto"
-								src="assets/images/Smiling-Laptop.png" alt="Smiling Laptop Logo">
+								src="assets/Smiling-Laptop.png" alt="Smiling Laptop Logo">
 						</div>
 						<div class="col text-start">
 							<p>Hello! Thanks for stopping by! My name is Tim Lemke, and I am Front End web developer living
